--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron" style="padding:45px 0px">
-  <h4 class="text-center">To-Do app (pipe)</h4>
+  <h4 class="text-center">To-Do app branch 2 test</h4>
 </div>
 
 <div class="input-group">
