--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,34 +1,39 @@
 <div class="jumbotron" style="padding:45px 0px">
-  <h4 class="text-center">To-Do </h4>
+  <h4 class="text-center">Keep-it </h4>
 </div>
 
-<div class="input-group">
-  <input type="text" class="form-control" #itemTitle>
-  <input type="text" ngbDatepicker  #d="ngbDatepicker" (click)="d.toggle()" [(ngModel)]="date" placeholder="yyyy-mm-dd" />
-  <div class="input-group-append input-group-text hover-cursor" (click)="onAdd(itemTitle,date)">
-    <i class="fa fa-plus-circle"></i>
-  </div>
+<div class="input-group d-flex justify-content-between align-items-center">
+  <mat-form-field style="width: 70%;" >
+    <textarea #itemTitle matInput class="form-control" placeholder="Leave a task"></textarea>
+  </mat-form-field>
+  <i #buttonEl class="material-icons hover-cursor md-36" (click)="d.toggle()" >
+    calendar_today
+  </i>
+  <input type="hidden" ngbDatepicker  #d="ngbDatepicker" [(ngModel)]="date"/>
+  <button [disabled]="!itemTitle.value||!date" id="addButton" mat-raised-button class="add-button" (click)="onAdd(itemTitle,date)" >
+    <i class="material-icons hover-cursor md-36">
+      add
+    </i>
+  </button>
+  
+
 </div>
 
 <div style="margin:5px 0px">
   <ul class="list-group">
-    <li class="list-group-item" *ngFor="let item of toDoListArray">
-          <div class="d-flex" style="width:100%">
-            <span class="hover-cursor" style="width:10%" [class.text-success]="item.isChecked" (click)="switchCheck(item.$key,item.isChecked)">
-              <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
-            </span>
-            <div (click)="editTitle(item.$key,item.title)" style="width:80%">
-              <span >{{item.title}}</span>
-              <span class="date pull-right">
-                {{item.date.day}}-{{item.date.month}}-{{item.date.year}}
-              </span>
-            </div>
-          </div>
-          <div class="hover-cursor text-danger pull-right" style="width:10%" (click)="onDelete(item.$key)">
-            <i class="fa fa-trash-o fa-lg"></i>
-          </div>
-            
-     
+    <li class="list-group-item d-flex justify-content-between" *ngFor="let item of toDoListArray">
+      <div style="width: 10%;" [class.text-success]="item.isChecked" (click)="switchCheck(item.$key,item.isChecked)">
+        <i class="fa fa-lg hover-cursor" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
+      </div>
+      <div class="hover-cursor" (click)="editTitle(item.$key,item.title,item.date)" style="width:70%">
+          <span >{{item.title}}</span>
+          <span class="date pull-right">
+            {{item.date.day}}-{{item.date.month}}-{{item.date.year}}
+          </span>
+      </div>
+      <div class="delete-icon hover-cursor text-danger pull-right" style="width:5%" (click)="onDelete(item.$key)">
+        <i (mouseover)="hover=true" (mouseleave)="hover=false" class="fa fa-trash-o fa-lg"></i>
+      </div>
     </li>
   </ul>
 </div>
