--- a/src/app/todo/todo.component.scss
+++ b/src/app/todo/todo.component.scss
@@ -1,18 +1,11 @@
-:root{
-    --primary: #0c2e64;
-    --secondary: #29b6f6;
-    --tertiary: #2d4792;
-    --dark-grey: #424242;
-    --light-grey: #737373;
-    --very-light-grey: #9e9e9e;
-}
+@import '../../css/color.scss';
 
 .hover-cursor {
     cursor: pointer;
 }
 .date {
-    font-size: 80%;
-    color: rgba(22, 21, 21, 0.74);
+    font-size: 70%;
+    color: $icon-grey;
 }
 .material-icons.md-18 {
 font-size: 18px !important;
@@ -40,21 +33,27 @@ width: 48px !important;
 }
 
 .input-group i{ 
-    color: #424242;;
-}
-li:hover {
-    background-color: #e4e4e4;
-    transition : 0.5s;
+    color: $icon-grey;
 }
 li{
-    transition: 0.5s;
-}
-
-li .delete-icon i{
-    opacity: 0;
-    transition: all 0.2s ease-in-out;
-}
-li:hover .delete-icon i{
-    opacity: 1;
-    transition: all 0.4s ease-in-out;
+    .note:hover {
+        background-color: $hover-grey;
+        transition : 0.5s;
+        .delete-icon i{
+            opacity: 1;
+            transition: all 0.4s ease-in-out;
+        }
+    }
+    .note{
+        border-radius: 25px;
+        padding: .75rem 1rem;
+        transition: 0.5s;
+        .delete-icon i{
+            opacity: 0;
+            transition: all 0.2s ease-in-out;
+        }
+    }
+    .ruler{
+        border: 0.5px solid #4242;
+    }
 }
