--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -4,7 +4,7 @@
 
 <div class="input-group d-flex justify-content-between align-items-center">
   <mat-form-field style="width: 70%;" >
-    <textarea #itemTitle matInput class="form-control" placeholder="Leave a task"></textarea>
+    <textarea #itemTitle matInput class="form-control" placeholder="Leave a Note"></textarea>
   </mat-form-field>
   <i #buttonEl class="material-icons hover-cursor md-36" (click)="d.toggle()" >
     calendar_today
@@ -21,19 +21,24 @@
 
 <div style="margin:5px 0px">
   <ul class="list-group">
-    <li class="list-group-item d-flex justify-content-between" *ngFor="let item of toDoListArray">
-      <div style="width: 10%;" [class.text-success]="item.isChecked" (click)="switchCheck(item.$key,item.isChecked)">
-        <i class="fa fa-lg hover-cursor" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
+    <li class=" d-flex flex-column" *ngFor="let item of toDoListArray">
+      <div class="note d-flex justify-content-between align-items-center mt-1" >
+          <div style="width: 5%;" [class.text-success]="item.isChecked" (click)="switchCheck(item.$key,item.isChecked)">
+              <i class="fa fa-lg hover-cursor" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
+            </div>
+            <div class="hover-cursor pr-2 d-flex justify-content-between align-items-baseline" (click)="editTitle(item.$key,item.title,item.date)" style="width:88%">
+                <span >{{item.title}}</span>
+                <span class="date pull-right">
+                  {{item.date.day}}-{{item.date.month}}-{{item.date.year}}
+                </span>
+            </div>
+            <div class="delete-icon hover-cursor text-danger pull-right d-flex " style="width:fit-content" (click)="onDelete(item.$key)">
+              <i class="material-icons md-18">
+                delete
+              </i>
+            </div>
       </div>
-      <div class="hover-cursor" (click)="editTitle(item.$key,item.title,item.date)" style="width:70%">
-          <span >{{item.title}}</span>
-          <span class="date pull-right">
-            {{item.date.day}}-{{item.date.month}}-{{item.date.year}}
-          </span>
-      </div>
-      <div class="delete-icon hover-cursor text-danger pull-right" style="width:5%" (click)="onDelete(item.$key)">
-        <i (mouseover)="hover=true" (mouseleave)="hover=false" class="fa fa-trash-o fa-lg"></i>
-      </div>
+      <div class="ruler"></div>
     </li>
   </ul>
 </div>
