--- a/src/css/color.scss
+++ b/src/css/color.scss
@@ -2,8 +2,8 @@
 $primary: #0c2e64;
 $secondary: #29b6f6;
 $tertiary: #2d4792;
-$dark-grey: #424242;
-$light-grey: #737373;
+$icon-grey:#424242;
+$logo-grey:#5f6368;
 $very-light-grey: #9e9e9e;
 $hover-grey:#e4e4e4;
-$icon-grey:#424242;
+
